fix(commands): MusicBotCommand is fixed